--- a/po/cs.po
+++ b/po/cs.po
@@ -10,8 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2024-12-17 21:52+0100\n"
 "PO-Revision-Date: 2013-01-19 12:31+0000\n"
 "Last-Translator: Thomas Perl <m@thp.io>\n"
-"Language-Team: Czech (http://www.transifex.com/projects/p/gpodder/language/"
-"cs/)\n"
+"Language-Team: Czech (https://github.com/gpodder/gpodder/tree/master/po)\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
