--- a/po/cs_CZ.po
+++ b/po/cs_CZ.po
@@ -15,8 +15,7 @@ msgstr ""
 "POT-Creation-Date: 2024-12-17 21:52+0100\n"
 "PO-Revision-Date: 2013-03-05 15:01+0000\n"
 "Last-Translator: Thomas Perl <m@thp.io>\n"
-"Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/"
-"gpodder/language/cs_CZ/)\n"
+"Language-Team: Czech (Czech Republic) (https://github.com/gpodder/gpodder/tree/master/po)\n"
 "Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
