--- a/po/da.po
+++ b/po/da.po
@@ -13,8 +13,7 @@ msgstr ""
 "POT-Creation-Date: 2024-12-17 21:52+0100\n"
 "PO-Revision-Date: 2013-01-19 12:30+0000\n"
 "Last-Translator: Thomas Perl <m@thp.io>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/gpodder/language/"
-"da/)\n"
+"Language-Team: Danish (https://github.com/gpodder/gpodder/tree/master/po)\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
