--- a/po/de.po
+++ b/po/de.po
@@ -2607,7 +2607,7 @@ msgstr "Bevorzugtes YouTube HLS-Format:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:49
 msgid "Preferred Vimeo format:"
-msgstr "Bevorzugtes Video-Format:"
+msgstr "Bevorzugtes Vimeo-Format:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:51
 msgid "Use proxy (Overrides environment variables)"
