--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1546,7 +1546,7 @@ msgstr "无结果"
 
 #: src/gpodder/gtkui/desktop/podcastdirectory.py:271
 msgid "Sorry, no podcasts were found"
-msgstr "抱歉，未找到博客"
+msgstr "抱歉，未找到播客"
 
 #: src/gpodder/gtkui/desktop/preferences.py:47
 #: src/gpodder/gtkui/desktop/preferences.py:90
